--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jade": "~1.3.1",
     "method-override": "~2.0.2",
     "morgan": "~1.1.1",
+    "mysql": "^2.5.1",
     "passport": "~0.2.0",
     "passport-facebook": "~1.0.3",
     "passport-google-oauth": "^0.1.5",
